# traectl

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.trae/: mcp.json
.trae/skills/traectl/: SKILL.md
.trae/skills/traectl/references/: batch-submit.md  submit-workflow.md
docs/: generate_doc.py  traectl-架构文档.docx  优化清单.md  架构文档.md
scripts/: gen_docs.py  watchdog.py
skills/traectl/: SKILL.md
skills/traectl/references/: dialog-handling.md  exit-code-protocol.md  model-switch.md
src/traectl/: __init__.py  __main__.py  cdp_client.py  config.py  connection_pool.py  controller.py  js_templates.py  platform.py  project_manager.py  response.py  response_waiter.py  workspace_manager.py
src/traectl/cli/: __init__.py  _agent.py  _core.py  _interact.py  _introspect.py  _query.py  _submit.py  _workspace.py
src/traectl/js_templates/: __init__.py  _chat_mixin.py  _editor_mixin.py  _media_mixin.py  _model_mixin.py  _task_mixin.py  _terminal_mixin.py
src/traectl/mixins/: __init__.py  base.py  chat_mixin.py  editor_mixin.py  git_mixin.py  health_mixin.py  media_mixin.py  model_mixin.py  task_mixin.py  terminal_mixin.py
tests/: test_auto_recover.py  test_cdp.py  test_cli.py  test_config.py  test_connection_pool.py  test_install.py  test_integration.py  test_model_mixin.py  test_response.py  test_workspace_manager.py
