[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "traectl"
version = "3.1.0"
description = "traectl — 通过 CDP JavaScript 注入控制 Trae CN SOLO 编码代理的命令行工具"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "traectl contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "websockets>=12.0",
]

[project.scripts]
traectl = "traectl.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "integration: 需要真实 Trae CN 实例的端到端测试",
    "install_test: 从 pip 安装到 CLI 使用的完整端到端测试（慢，需手动指定）",
]
